# fasthtml-nb-ext

./: pyproject.toml
fasthtml_nb_ext/: __init__.py  playground.py  server.py
